--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,2 +1,8 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
+
+.bobagem {
+	text-decoration:line-through;
+	color:#C3C3C3;
+	font-size:13px;
+}
