--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,8 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>Quem é o manolo??</h1>
+  <p>Atuo na área de desenvolvimento há 3 anos. Nesse período trabalhei em grandes projetos, especialmente na área de e-learning com o sistema OpenSource Trilhas Educação a Distância, na qual consolidei meus conhecimentos em arquitetura MVC, ZendFramework, jQuery, YUI Library, MySQL, PostgreSQL e Oracle. Trabalhei também no MEC desenvolvendo módulos e realizando manutenções no SisFIES.</p>
+	
+	<p>Sou formado em Análise e Desenvolvimento de Sistemas pela Universidade Católica de Brasília.</p>
+
+	<p>Atualmente, trabalho na empresa <a href="http://grupo954.com/">Grupo954</a>, com desenvolvimento de sistemas.</p>
 </section>
